fix experience content overflow on mobile

--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -98,10 +98,6 @@ h5 {
 }
 
 @media (max-width: 720px) {
-    .experience-container {
-        height: 125vh;
-    }
-
     .experience-content-container {
         flex-direction: column;
         align-items: center;
@@ -133,17 +129,16 @@ h5 {
     }
 
     .active-job-points-list {
-        list-style: none;
+        margin-left: 2rem;
     }
 
     .active-job-heading {
         text-align: center;
-        height: 15vh;
         width: 100%;
     }
 
-    .active-job-description {
-        text-align: center;
-        height: 60vh;
+    h5 {
+        margin-left: 2rem;
     }
+
 }
